load("@bazel_skylib//rules:common_settings.bzl", "string_setting", "string_flag")
load("@rules_cc//cc/toolchains:artifacts.bzl", "cc_artifact_name_pattern")
load("@rules_cc//cc/toolchains/impl:documented_api.bzl", "cc_args_list")
load("//toolchain/bootstrap:declare_toolchains.bzl", declare_bootstrap_toolchains = "declare_toolchains")
load(":declare_toolchains.bzl", "declare_toolchains")

package(default_visibility = ["//toolchain:__subpackages__"])

# TODO(cerisier): Find a better name ?
# This should be the semantic for "what are we building ?"
# Runtimes without dependencies, runtimes with dependencies, user programs with runtime dependencies...
string_setting(
    name = "runtime_stage",
    values = [
        "stage0", # depend on compiler-only: CRTs, builtins, libc, static libraries.
        # "stage1", # depends on above: libunwind
        # "stage2", # depends on above: libc++abi
        # "stage3", # depends on above: libc++
        "complete", # depends on above: user programs.
    ],
    build_setting_default = "complete",
)

# Controls whether targets are built with bootstrapped toolchain or prebuilt toolchain.
string_flag(
    name = "source",
    values = [
        "bootstrapped",
        "prebuilt",
    ],
    build_setting_default = "prebuilt",
)

config_setting(
    name = "runtimes_all",
    flag_values = {
        ":runtime_stage": "complete",
    },
)

config_setting(
    name = "runtimes_none",
    flag_values = {
        ":runtime_stage": "stage0",
    },
)

config_setting(
    name = "prebuilt_toolchain",
    flag_values = {
        ":source": "prebuilt",
    },
)

config_setting(
    name = "bootstrapped_toolchain",
    flag_values = {
        ":source": "bootstrapped",
    },
)

cc_args_list(
    name = "default_link_flags",
    args = select({
        "@platforms//os:macos": [
            "//toolchain/args/macos:default_link_flags",
        ],
        "@platforms//os:linux": [
            "//toolchain/args/linux:default_link_flags",
        ],
        "@platforms//os:windows": [],
        "@platforms//os:none": [],
    }),
)

cc_args_list(
    name = "default_startfiles",
    args = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": [
            "//toolchain/args:crt_search_directory",
        ],
        "@platforms//os:windows": [
            "//toolchain/args:crt_search_directory",
        ],
        "@platforms//os:none": [],
    }),
)

cc_args_list(
    name = "resource_dir",
    args = select({
        "@platforms//os:macos": [],
        "//conditions:default": [
            "//toolchain/args:resource_dir",
        ],
    }),
)

cc_args_list(
    name = "default_libs",
    args = select({
        "@platforms//os:macos": [
            "//toolchain/args/macos:default_libs",
        ],
        "@platforms//os:linux": [
            "//toolchain/args:default_libs",
            "//toolchain/args/linux:default_libs",
        ],
        "@platforms//os:windows": [
            "//toolchain/args:default_libs",
            "//toolchain/args/windows:default_libs",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "sysroot_flags",
    args = select({
        "@platforms//os:macos": [
            "//toolchain/args/macos:macos_sdk_sysroot",
        ],
        "//conditions:default": [
            "//toolchain/args:empty_sysroot_flags",
        ],
    }),
)

cc_args_list(
    name = "hermetic_compile_flags",
    args = select({
        "@platforms//os:macos": [],
        "//conditions:default": [
            "//toolchain/args:hermetic_compile_flags",
        ],
    }),
)

cc_args_list(
    name = "hermetic_link_flags",
    args = select({
        "@platforms//os:macos": [],
        "//conditions:default": [
            "//toolchain/args:hermetic_link_flags",
        ],
    }),
)

# TODO(cerisier): extract those into proper semantic args list.
cc_args_list(
    name = "macos_toolchain_args",
    args = [
        "//toolchain/args/macos:macos_minimum_os_flags",
    ],
)

# TODO(cerisier): extract those into proper semantic args list.
cc_args_list(
    name = "linux_toolchain_args",
    args = [
        "//toolchain/args:libcxx_headers_include_search_paths",
    ] + select({
        "//platforms/config:musl": [
            "//toolchain/args/linux:kernel_headers_include_search_paths",
            "//toolchain/args/linux:musl_libc_headers_include_search_paths",
        ],
        "//platforms/config:gnu": [
            "//toolchain/args/linux:kernel_headers_include_search_paths",
            "//toolchain/args/linux:glibc_headers_include_search_paths",
        ],
        "//conditions:default": [],
    }) + select({
        "//platforms/config:musl": [
            #TODO: Handle musl dynamic linking
            # musl implies static linking for now
            "//toolchain/args:static_link_executable",
        ],
        "//conditions:default": [],
    }),
)

# TODO(cerisier): extract those into proper semantic args list.
cc_args_list(
    name = "windows_toolchain_args",
    args = [
        "//toolchain/args:libcxx_headers_include_search_paths",
        "//toolchain/args/windows:mingw_headers_include_search_paths",
    ],
)

cc_args_list(
    name = "platform_specific_args",
    args = select({
        # Platform specific flags.
        "@platforms//os:macos": [":macos_toolchain_args"],
        "@platforms//os:linux": [":linux_toolchain_args"],
        "@platforms//os:windows": [":windows_toolchain_args"],
        "@platforms//os:none": [],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "toolchain_args",
    args = [
        # Common default compile flags.
        "//toolchain/args:llvm_target_for_platform",
        "//toolchain/args:no_absolute_paths_for_builtins",
        "//toolchain/args:deterministic_compile_flags",

        ":sysroot_flags",
        ":hermetic_compile_flags",
        ":hermetic_link_flags",

        # TODO(cerisier): Explode this into specific args instead
        ":platform_specific_args",

        # Optional sanitizers
        "//toolchain/args:ubsan_flags",

        # Common default link flags.
        "//toolchain/args:force_linker_flags",
        "//toolchain/args:rtlib",
        ":resource_dir",
        ":default_link_flags",
        ":default_startfiles", # Needs to stay out of resource_dir since clang does not always search for crtstuff for all targets.
        ":default_libs",
    ],
)

cc_artifact_name_pattern(
    name = "windows_executable_pattern",
    category = "@rules_cc//cc/toolchains/artifacts:executable",
    prefix = "",
    extension = ".exe",
)

declare_toolchains()
declare_bootstrap_toolchains()
