load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@llvm//toolchain:selects.bzl", "platform_llvm_binary")
load("@llvm//tools:defs.bzl", "TOOLCHAIN_BINARIES")

package(default_visibility = ["//visibility:public"])

[
    alias(
        name = tool,
        actual = platform_llvm_binary(tool),
    )
    for tool in TOOLCHAIN_BINARIES
]

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
)
