load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@llvm//toolchain:selects.bzl", "platform_llvm_binary")
load("@llvm//tools:defs.bzl", "TOOLCHAIN_BINARIES")

package(default_visibility = ["//visibility:public"])

[
    alias(
        name = tool,
        actual = platform_llvm_binary(tool),
        tags = ["manual"],
    )
    for tool in TOOLCHAIN_BINARIES
]

# TODO(zbarsky): Remove these after we rebuild dists with proper names.
[
    alias(
        name = tool,
        actual = platform_llvm_binary(tool),
        tags = ["manual"],
    )
    for tool in [
        "addr2line",
        "otool",
        "readelf",
        "windres",
    ]
]

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
)
